objects/Event_Team_Member__c.object
<CustomObject>
    <description>Event Team Members</description>
    <fields>
        <fullName>CreatedByEventTeamMemberTrigger__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used by EventTeamMember_Trigger to prevent recursion.</inlineHelpText>
        <label>CreatedByEventTeamMemberTrigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Team_Member_Role__c</fullName>
        <description>Event Team Member Roles</description>
        <inlineHelpText>Roles of Event Team Members Specific to the Event</inlineHelpText>
        <label>Event Team Member Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Event_Team_Member_Role</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Event Specific to Event Team Members</description>
        <inlineHelpText>Event Specific to Event Team Members</inlineHelpText>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Event_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_of_Actual_Invitees__c</fullName>
        <description>Maximum number of guests per Event Team Member</description>
        <inlineHelpText>Maximum number of guests for this Event Team Member. This is the Maximum Number of your Invitees that can attend, which will be Decided based on the Prioritised List which will need to be Approved by the Event Coordinator and Compliance Prior.</inlineHelpText>
        <label>Maximum Guests</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_of_Proposed_Invitees__c</fullName>
        <description>Maximum Number of Proposed Invitees</description>
        <inlineHelpText>Maximum Number of Proposed Invitees. This is the Maximum Number of Invitees that you can propose for the event.</inlineHelpText>
        <label>Maximum Invitees</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Delegates__c</fullName>
        <inlineHelpText>Total number of Delegates linked to this Team Member regardless of status</inlineHelpText>
        <label>Number of Delegates</label>
        <summaryForeignKey>Event_Team_Members_Delegates__c.Event_Team_Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Event Team Member Name</description>
        <inlineHelpText>Event Team Member Name and Salesforce User</inlineHelpText>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Team_Member</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Team Member</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Proposed_vs_Actual_Invitees</fullName>
        <active>true</active>
        <description>Validation that Proposed Invitees is Greater or Equal to Actual Invitees</description>
        <errorConditionFormula>Maximum_Number_of_Actual_Invitees__c &gt; Maximum_Number_of_Proposed_Invitees__c</errorConditionFormula>
        <errorMessage>Maximum Number of Actual Invitees cannot be greater than Maximum Number of Proposed Invites</errorMessage>
    </validationRules>
</CustomObject>